--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </article>
       <article class="col-md-4">
-        <a href="https://github.com/salimab/Project-Build-a-Portfolio-Site" class="thumbnail" target="_blank">
+        <a href=" https://salimab.github.io/Project-Build-a-Portfolio-Site/" class="thumbnail" target="_blank">
           <img src="img/media1.png" srcset="img/media4.png 342w, img/media3.png 683w, img/media2.png 1024w, img/media1.png 1366w" class="img-responsive" alt="Portfolio picture">
         </a>
         <div class="project">
